# DPOS

./: .env.example  .gitignore  DPOS.spec  README.md  app.py  build_app.py  config.py  dpos_backend.spec  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: app.py  backend_api.py  config.py  main.py
backend/core/: database.py  events.py  models.py
backend/services/: clipboard_service.py  scheduler_service.py
backend/utils/: platform.py  text_utils.py  time_utils.py
core/: __init__.py  database.py  exceptions.py  models.py
core/migrations/: env.py
data/index/: MAIN_189on277eripzwkl.seg  MAIN_3kndnnjxdm58169k.seg  MAIN_88qfgtg3ptrzmqov.seg  MAIN_bkw9g4s0hbvjvb9e.seg  MAIN_ibl7dsmt4rlf90pi.seg  MAIN_ljbfyg7k5s3wu5w5.seg  MAIN_tdzkeghme0e7gewd.seg  MAIN_xd4ou5kuu4npx583.seg  MAIN_xuvn7na4nb8cbaz8.seg  _MAIN_12111.toc  _MAIN_12112.toc
electron/: main.js
frontend/: package-lock.json  package.json
modules/ai/: __init__.py  context_builder.py
modules/automation/: recorder.py  scheduler.py
modules/clipboard/: __init__.py  categories.py  monitor.py  store.py
modules/memory/: __init__.py  capture.py  recall.py
modules/monitor/: alerts.py  collector.py
modules/projects/: git_watcher.py  (+2 more)
services/: __init__.py  clipboard_service.py  file_watcher_service.py  monitor_service.py  scheduler_service.py  service_manager.py
tests/: conftest.py
ui/: __init__.py  app_window.py  hotkeys.py  system_tray.py
utils/: __init__.py  file_utils.py  platform.py  process_utils.py  text_utils.py  time_utils.py
(+83 files in other folders)
